# Animated-3D-Fractals

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  INSTALL.md  Makefile  Makefile.linux  Makefile.osx  Makefile.win32  README  boxplorer2  boxplorer2.cc  c.sh  camera.cc  camera.h  compile.sh  create_mp4.sh  edit-cfg  gl_workaround.h  glsl  r  sdl2-test  shader.cc  shadershrink  tags  uniforms.cc  uniforms.cc.orig
AntTweakBar/src/: TwBar.cpp
GL/: glext.h
cfgs/AlienCavern/: default.cfg  fragment.glsl
cfgs/knighty/Reflectoids/: last.cfg
cfgs/mandelbulb/: default.cfg  fragment.glsl
cfgs/rrrola/: last.cfg
include/: uniforms.h
source/: boxplorer2.cpp  camera.cpp  glsl.cpp  interpolate.cpp  oculus_sdk2.cpp  oculus_sdk4.cpp  shader.cpp  tiler.cpp  uniforms.cpp
tests/: test_camera.cpp  test_interpolate.cpp
tmp/: main.c  test
